# mdata

./: .gitignore  README.md  cabal.project  dataframe-load.cabal  dataframe-plot.cabal  dataframe-plot.org  kaggle.org  mdata.cabal  mdata.org  readme.md
app/: dataframe-load.hs  generate-examples.hs  prettychart-serve.hs
src/: Kaggle.hs  MData.hs
src/DataFrame/: Cache.hs  Chart.hs  Datasets.hs  Download.hs  Load.hs  Plot.hs
