cabal-version:      3.14
name:               dataframe-load
version:            0.1.0.0
license: BSD-3-Clause
author:             Tony Day
maintainer:         tonyday567@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common ghc-options-exe-stanza
  ghc-options:
    -fforce-recomp
    -funbox-strict-fields
    -rtsopts
    -threaded
    -with-rtsopts=-N

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wno-deprecated-flags

common mhs2024-additions
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitNamespaces
    ExtendedDefaultRules
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    FunctionalDependencies
    GADTs
    GADTSyntax
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    IncoherentInstances
    InstanceSigs
    KindSignatures
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MonoLocalBinds
    MultilineStrings
    MultiParamTypeClasses
    MultiWayIf
    NamedDefaults
    NamedFieldPuns
    NegativeLiterals
    NoMonomorphismRestriction
    NondecreasingIndentation
    NoStarIsType
    NumericUnderscores
    OrPatterns
    OverlappingInstances
    OverloadedRecordDot
    OverloadedRecordUpdate
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    PolymorphicComponents
    RankNTypes
    RecordWildCards
    RecursiveDo
    RequiredTypeArguments
    QualifiedDo
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeSynonymInstances
    UndecidableInstances
    UndecidableSuperClasses
    UnicodeSyntax
    ViewPatterns

common ghc2024-stanza
  if impl(ghc >=9.10)
    default-language:
      GHC2024
  else
    import: mhs2024-additions
    default-language:
      GHC2021

library
  import: ghc-options-stanza
  import: mhs2024-additions
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >=4.14 && <5,
    containers,
    dataframe,
    chart-svg,
    prettychart,
    perf >= 0.14,
    optics-core,
    bytestring,
    text,
    prettyprinter,
    vector,
    vector-algorithms,
    flow,
    lens,
    numhask,
    numhask-space,
    harpie,
    random,
    mwc-random,
    mealy,
    formatn,
    directory,
    filepath,
    time,
    wai >=3.2 && <3.3,
    warp >=3.3 && <3.5,
    binary >=0.8 && <0.9,
    http-types >=0.12 && <0.13,
    http-conduit >=2.3 && <2.4,
    http-client >=0.7 && <0.8,
    process >=1.6 && <1.7,
  exposed-modules:
    DataFrame.Plot
    DataFrame.Chart
    DataFrame.Load
    DataFrame.Datasets
    DataFrame.Cache
    DataFrame.Download

executable dataframe-load
  import: ghc-options-exe-stanza
  import: ghc-options-stanza
  import: ghc2024-stanza
  main-is: dataframe-load.hs
  hs-source-dirs: app
  build-depends:
    async >=2.2.4 && <2.3,
    base >=4.14 && <5,
    bytestring >=0.11.3 && <0.13,
    chart-svg >=0.8 && <0.9,
    dataframe,
    dataframe-load,
    directory,
    filepath >=1.4 && <1.6,
    flow,
    fsnotify >=0.4.1 && <0.5,
    http-types >=0.12 && <0.13,
    optics-core >=0.4.1 && <0.5,
    optparse-applicative >=0.17 && <0.20,
    prettychart,
    process >=1.6 && <1.7,
    text >=1.2 && <2.2,
    time >=1.9 && <1.16,
    wai >=3.2 && <3.3,
    warp >=3.3 && <3.5,
    binary,
  ghc-options: -O2

executable generate-examples
  import: ghc-options-exe-stanza
  import: ghc-options-stanza
  import: ghc2024-stanza
  main-is: generate-examples.hs
  hs-source-dirs: app
  build-depends:
    base >=4.14 && <5,
    bytestring >=0.11.3 && <0.13,
    chart-svg >=0.8 && <0.9,
    dataframe-load,
    filepath >=1.4 && <1.6,
