cabal-version:      3.14
name:               dataframe-plot
version:            0.1.0.0
license: BSD-3-Clause
author:             Tony Day
maintainer:         tonyday567@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common ghc-options-stanza
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -Wno-deprecated-flags

common mhs2024-additions
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BinaryLiterals
    BlockArguments
    ConstraintKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitNamespaces
    ExtendedDefaultRules
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    FunctionalDependencies
    GADTs
    GADTSyntax
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    IncoherentInstances
    InstanceSigs
    KindSignatures
    LambdaCase
    LiberalTypeSynonyms
    MagicHash
    MonoLocalBinds
    MultilineStrings
    MultiParamTypeClasses
    MultiWayIf
    NamedDefaults
    NamedFieldPuns
    NegativeLiterals
    NoMonomorphismRestriction
    NondecreasingIndentation
    NoStarIsType
    NumericUnderscores
    OrPatterns
    OverlappingInstances
    OverloadedRecordDot
    OverloadedRecordUpdate
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    PolymorphicComponents
    RankNTypes
    RecordWildCards
    RecursiveDo
    RequiredTypeArguments
    QualifiedDo
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeSynonymInstances
    UndecidableInstances
    UndecidableSuperClasses
    UnicodeSyntax
    ViewPatterns

library
  import: ghc-options-stanza
  import: mhs2024-additions
  default-language: Haskell2010
  hs-source-dirs: src
  build-depends:
    base >=4.14 && <5,
    containers,
    dataframe,
    chart-svg,
    prettychart,
    perf,
    optics-core,
    bytestring,
    text,
    prettyprinter,
    vector,
    vector-algorithms,
    flow,
    lens,
    numhask,
    numhask-space,
    harpie,
    random,
    mwc-random,
    mealy,
    formatn,
  exposed-modules:
    DataFrame.Plot
